Fix horiz overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -132,8 +132,7 @@ p {
 }
 .filler {
     display: table;
-    width: 10em;
-    min-width: 10%;
+    width: 10%;
     overflow: hidden;
     border: solid;
     border-color: $border;
